--- a/nhakhoa.html
+++ b/nhakhoa.html
@@ -32,7 +32,7 @@
             <li><a class="dropdown-item" href="#">CẢM NHẬN</a></li>
           </ul>
         </li>
-		  <li class="nav-item"> <a class="nav-link" href="#">BẢNG GIÁ</a> </li>       
+		  <li class="nav-item"> <a class="nav-link" href="trangtintuc.html">TIN TỨC</a> </li>       
         <li class="nav-item"> <a class="nav-link" href="#">LIÊN HỆ</a> </li>
     </div>
   </div>
