--- a/trangdichvu.html
+++ b/trangdichvu.html
@@ -19,62 +19,80 @@
     <div class="right"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter ms-2"></i></a> </div>
   </div>
 </div>
+	
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container"> <a class="navbar-brand" href="#"><img src="images/LOGO 2 MPHUOCHC 1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">VỀ CHÚNG TÔI</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="trangdichvu.html"> DỊCH VỤ </a>
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> DỊCH VỤ </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">BỌC RĂNG SỨ</a></li>
+            <li><a class="dropdown-item" href="#">RĂNG SỨ THẨM MỸ</a></li>
+            <li><a class="dropdown-item" href="#">TRỔNG IMPLANT</a></li>
+            <li><a class="dropdown-item" href="#">NIỀNG RĂNG</a></li>
+            <li><a class="dropdown-item" href="#">LẤY CAO RĂNG</a></li>
+            <li><a class="dropdown-item" href="#">TRÁM RĂNG THẨM MỸ</a></li>
+          </ul>
+        </li>
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> KHÁCH HÀNG </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">HÌNH ẢNH</a></li>
             <li><a class="dropdown-item" href="#">CẢM NHẬN</a></li>
           </ul>
         </li>
-		  <li class="nav-item"> <a class="nav-link" href="trangtintuc.html">TIN TỨC</a> </li>       
+        <li class="nav-item"> <a class="nav-link" href="trangtintuc.html">TIN TỨC</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#">LIÊN HỆ</a> </li>
+      </ul>
     </div>
   </div>
 </nav>
-<main>
-  <section id="tintuc">
-    <div class="container py-5">
-      <h2 class="text-center text-primary"><b>TIN TỨC NHA KHOA</b></h2>
+  <section id="service">
+    <div class="container py-3">
+      <h2 class="text-center text-primary"><b>DỊCH VỤ NỔI BẬT TẠI NHA KHOA MỸ PHƯỚC</b></h2>
+      <p class="text-center">Nha khoa Mỹ Phước cung cấp tất cả các dịch vụ hỗ trợ và điều trị nha khoa, thẩm mỹ nha khoa,mang đến tất cả các giải pháp làm đẹp nụ cười cho khách hàng.</p>
       <div class="row">
-        <div class="col-lg-4 mb-3"> <img src="images/post-img-small-1 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Dở khóc dở cười câu chuyện răng khôn.</a></h5>
-          <p>Phàm là những bộ phận trên cơ thể con người thì đều có chức năng nhất định...</p>
-          <p><span class="text-danger me-4">6 12, 2019</span> <span>(22) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img1 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">BỌC RĂNG SỨ</a></h4>
+            <p>Bọc răng sứ ivy - không còn sỉn màu, thưa, hô, khập khểnh mòn men....</p>
+          </div>
         </div>
-        <div class="col-lg-4 mb-3"> <img src="images/post-img-small-2 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Nhổ răng khi mang thai có an toàn không</a></h5>
-          <p>Nhổ răng khi mang thai có an toàn không</p>
-          <p><span class="text-danger me-4">28 11, 2019</span> <span>(18) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img2 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">DÁN SỨ VENEER</a></h4>
+            <p>Dán sứ veneer hạn chế tối đa mài răng, răng xinh đều đẹp, không gây e buốt, kết quả bền...</p>
+          </div>
         </div>
-        <div class="col-lg-4 mb-3"> <img src="images/post-img-small-3 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Niềng răng trả góp lãi suất 0đ tại sao không?!</a></h5>
-          <p>Bạn có biết tin gì chưa? Hỡi những cô gái, chàng trai đang muốn cải thiện...</p>
-          <p><span class="text-danger me-4">26 11, 2019</span> <span>(12) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img3 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">TẨY TRẮNG RĂNG</a></h4>
+            <p>Tẩy trắng răng laser whitening nhanh chóng, an toàn - chỉ sau 60’ răng trắng bật tone từ...</p>
+          </div>
         </div>
-		  <div class="col-lg-4 mb-3"> <img src="images/post-img-small-1 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Dở khóc dở cười câu chuyện răng khôn.</a></h5>
-          <p>Phàm là những bộ phận trên cơ thể con người thì đều có chức năng nhất định...</p>
-          <p><span class="text-danger me-4">6 12, 2019</span> <span>(22) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img4 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">NIỀNG RĂNG THẨM MỸ</a></h4>
+            <p>Niềng răng mắc cài và niềng răng khay trong cho hàm răng đều đẹp, chuẩn khớp cắn...</p>
+          </div>
         </div>
-        <div class="col-lg-4 mb-3"> <img src="images/post-img-small-2 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Nhổ răng khi mang thai có an toàn không</a></h5>
-          <p>Nhổ răng khi mang thai có an toàn không</p>
-          <p><span class="text-danger me-4">28 11, 2019</span> <span>(18) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img5 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">CẤY GHÉP RĂNG IMPLANT</a></h4>
+            <p>Trồng răng implant là một tiểu phẫu trong nha khoa áp dụng trong trường hợp mất răng...</p>
+          </div>
         </div>
-        <div class="col-lg-4 mb-3"> <img src="images/post-img-small-3 1.jpg" alt="" class="img-fluid">
-          <h5 class="pt-3"><a href="#">Niềng răng trả góp lãi suất 0đ tại sao không?!</a></h5>
-          <p>Bạn có biết tin gì chưa? Hỡi những cô gái, chàng trai đang muốn cải thiện...</p>
-          <p><span class="text-danger me-4">26 11, 2019</span> <span>(12) COMMENTS</span></p>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="bg-light p-3 text-center"> <img src="images/dv_img6 1.jpg" alt="" class="img-fluid">
+            <h4 class="pt-3"><a href="#">TRÁM RĂNG THẨM MỸ</a></h4>
+            <p>Trong cuộc sống có rất nhiều nguyên nhân chủ quan và khách quan khiến răng của...</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
   <section id="dat-lich">
     <div class="container py-3">
       <div class="row d-flex align-items-center">
@@ -88,7 +106,6 @@
       </div>
     </div>
   </section>
-</main>
 <footer class="bg-primary text-light">
   <div class="container">
     <div class="row">
